Fix for footer covering events at bottom of tour page

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,13 @@
   --main-padding-top: 20px;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: var(--background-color);
+}
+
 .App {
   display: flex;
   flex-direction: column;
@@ -55,8 +62,18 @@
   text-decoration: none;
 }
 
+.bottom-padding {
+  padding-bottom: 100px; /* Adjust the value as needed */
+}
+
 @media (max-width: 767.98px) {
   .main-content {
     padding-inline: 5px;
   }
+  .bottom-padding {
+    padding-bottom: 140px; /* Adjust the value as needed */
+  }
 }
+
+
+
