--- a/src/components/Music/Music.css
+++ b/src/components/Music/Music.css
@@ -7,6 +7,9 @@
   /* display: flex;
   flex-direction: column;
   align-items: center; */
+  /* height: 100vh; */
+  height: calc(100vh - var(--header-height) - var(--footer-height));
+
 }
 
 .music h1, .music h2 {
@@ -23,6 +26,8 @@
 
 .music-container {
   padding: 20px;
+  /* height: calc(100vh - var(--header-height) - var(--footer-height)); */
+
 }
 
 .spotify-embed {
