--- a/src/components/Tour/Tour.css
+++ b/src/components/Tour/Tour.css
@@ -45,6 +45,7 @@ body.gray-theme {
 
 .event-title {
   font-weight: bold;
+  font-style: italic;
 }
 
 .event-venue {
